--- a/src/app/components/template/nav/nav.component.html
+++ b/src/app/components/template/nav/nav.component.html
@@ -1,13 +1,13 @@
 <mat-sidenav-container class="container">
     <mat-sidenav class="sidenav" mode="side" opened fixedInViewport="true" fixedTopGap="65" fixedBottomGap="65">
         <mat-nav-list class="nav-list">
-            <a mat-list-item>
+            <a mat-list-item routerLink="/">
                 <i class="material-icons">
                     home
                 </i>
                 Principal
             </a>
-            <a mat-list-item>
+            <a mat-list-item routerLink="/usuarios">
                 <i class="material-icons">
                     settings
                 </i>
@@ -22,6 +22,8 @@
         </mat-nav-list> 
     </mat-sidenav>
     <mat-sidenav-content class="content">
-        <app-home></app-home>
+        <router-outlet>
+
+        </router-outlet>
     </mat-sidenav-content>
 </mat-sidenav-container>
