--- a/src/styles.css
+++ b/src/styles.css
@@ -6,3 +6,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .v-middle{
     vertical-align: middle;
 }
+
+.blue-snackbar {
+    background: #2196F3;
+  }
