--- a/src/app/components/usuario/create/create.component.html
+++ b/src/app/components/usuario/create/create.component.html
@@ -1,7 +1,35 @@
-<button mat-raised-button (click)="createUsuario()" color="primary">
-    Salvar
-</button>
+<mat-card>
+    <mat-card-title> Cadastro Usuário</mat-card-title>
+    <form>
+        <mat-form-field>
+            <input matInput placeholder="Nome" [(ngModel)]="usuario.nome" name="nome">            
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="CPF" [(ngModel)]="usuario.cpf" name="cpf">
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="E-mail" [(ngModel)]="usuario.email" name="email">
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Telefone" [(ngModel)]="usuario.telefone" name="telefone">
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Função" [(ngModel)]="usuario.funcao" name="funcao">
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Perfil" [(ngModel)]="usuario.perfil" name="perfil">
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Situação" [(ngModel)]="usuario.situacao" name="situacao">
+        </mat-form-field>
+    </form>
+    <button mat-raised-button (click)="createUsuario()" color="primary" name="bnome">
+        Salvar
+    </button>
+    
+    <button mat-raised-button (click)="cancel()" >
+        Cancelar
+    </button>
+</mat-card>
 
-<button mat-raised-button (click)="cancel()" >
-    Cancelar
-</button>
+
