--- a/src/app/components/usuario/read/read.component.html
+++ b/src/app/components/usuario/read/read.component.html
@@ -1,1 +1,33 @@
-<p>read works!</p>
+<div class="mat-elevation-z3">
+    <table mat-table [dataSource]="usuarios">
+      <!-- Id Column -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef >Id</th>
+        <td mat-cell *matCellDef="let row">{{row.id}}</td>
+      </ng-container>
+      
+      <!-- Nome Column -->
+      <ng-container matColumnDef="nome">
+        <th mat-header-cell *matHeaderCellDef >Nome</th>
+        <td mat-cell *matCellDef="let row">{{row.nome}}</td>
+      </ng-container>
+
+      <!-- Email Column -->
+      <ng-container matColumnDef="email">
+        <th mat-header-cell *matHeaderCellDef >E-mail</th>
+        <td mat-cell *matCellDef="let row">{{row.email}}</td>
+      </ng-container>
+
+      <!-- Name Column -->
+      <ng-container matColumnDef="perfil">
+        <th mat-header-cell *matHeaderCellDef >Perfil</th>
+        <td mat-cell *matCellDef="let row">{{row.perfil}}</td>
+      </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  
+    
+  </div>
+  
