--- a/src/app/components/usuario/read/read.component.html
+++ b/src/app/components/usuario/read/read.component.html
@@ -23,6 +23,12 @@
         <th mat-header-cell *matHeaderCellDef >Perfil</th>
         <td mat-cell *matCellDef="let row">{{row.perfil}}</td>
       </ng-container>
+
+      <!-- CPF Column -->
+      <ng-container matColumnDef="cpf">
+        <th mat-header-cell *matHeaderCellDef >CPF</th>
+        <td mat-cell *matCellDef="let row">{{row.cpf | cPF }}</td>
+      </ng-container>
   
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
