Insercao e Edicao dos usuarios

--- a/src/app/components/usuario/read/read.component.css
+++ b/src/app/components/usuario/read/read.component.css
@@ -2,3 +2,15 @@ table{
     margin-top: 10px;
     width: 100%;
 }
+
+.edit{
+    margin-right: 5px;
+}
+
+.edit > i{
+  color: #3516e0;
+}
+
+.delete > i{
+    color: #e35e6b;
+}
