--- a/src/app/components/usuario/read/read.component.html
+++ b/src/app/components/usuario/read/read.component.html
@@ -29,6 +29,23 @@
         <th mat-header-cell *matHeaderCellDef >CPF</th>
         <td mat-cell *matCellDef="let row">{{row.cpf | cPF }}</td>
       </ng-container>
+
+      <!-- Action Column -->
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef >Ações</th>
+        <td mat-cell *matCellDef="let row">
+            <a routerLink="/usuarios/update/{{row.id}}" class="edit">
+                <i class="material-icons ">
+                    edit
+                </i>
+            </a>
+            <a routerLink="" class="delete">
+                <i class="material-icons ">
+                    delete
+                </i>
+            </a>
+        </td>
+      </ng-container>
   
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
