--- a/src/app/components/usuario/read/read.component.html
+++ b/src/app/components/usuario/read/read.component.html
@@ -39,7 +39,7 @@
                     edit
                 </i>
             </a>
-            <a routerLink="" class="delete">
+            <a routerLink="/usuarios/delete/{{row.id}}" class="delete">
                 <i class="material-icons ">
                     delete
                 </i>
