--- a/src/app/components/template/header/header.component.html
+++ b/src/app/components/template/header/header.component.html
@@ -1,12 +1,12 @@
 <mat-toolbar class="header mat-elevation-z3" > 
     <span>
-        <a routerLink="/">
+        <a routerLink="{{routeUrl}}">
             <img class="logo" src="assets/img/logoDataColorido.png" alt="logo">            
         </a>
     </span>
     <span class="title-group">
-        <a>
-            Cadastro
+        <a routerLink="{{routeUrl}}">
+            {{title}}
         </a>
     </span>
 </mat-toolbar>
