--- a/src/app/components/usuario/read/read.component.html
+++ b/src/app/components/usuario/read/read.component.html
@@ -30,11 +30,20 @@
         <td mat-cell *matCellDef="let row">{{row.cpf | cPF }}</td>
       </ng-container>
 
+        <!-- toggle olumn -->
+	    <ng-container matColumnDef="toggle">
+        <th mat-header-cell *matHeaderCellDef> Habilitado </th>
+       <td mat-cell *matCellDef="let element" >
+            <mat-slide-toggle  [checked]="element.situacao" (change)="updateStatus(element)"></mat-slide-toggle>
+         </td>
+     </ng-container>
+
+
       <!-- Action Column -->
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef >Ações</th>
         <td mat-cell *matCellDef="let row">
-            
+          
             <a routerLink="/usuarios/update/{{row.id}}" class="edit">
                 <i class="material-icons ">
                     edit
@@ -48,7 +57,7 @@
 
         </td>
       </ng-container>
-  
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
