--- a/src/app/components/usuario/read/read.component.css
+++ b/src/app/components/usuario/read/read.component.css
@@ -1,5 +1,6 @@
 table{
     margin-top: 10px;
+    margin-bottom: 10px;
     width: 100%;
 }
 
@@ -13,4 +14,15 @@ table{
 
 .delete > i{
     color: #e35e6b;
+}
+
+form{
+    display:flex;
+    flex-direction: column;
+
+}
+
+button{
+    margin-top: 10px;
+    margin-right: 15px;
 }
