--- a/src/app/views/usuario-crud/usuario-crud.component.html
+++ b/src/app/views/usuario-crud/usuario-crud.component.html
@@ -1,5 +1,4 @@
-<button mat-raised-button (click)="navigateToUsuarioCreate()">
+<app-read></app-read>
+<button mat-raised-button (click)="navigateToUsuarioCreate()" color="accent">
     Inserir
 </button>
-
-<app-read></app-read>
