--- a/src/app/components/usuario/read/read.component.css
+++ b/src/app/components/usuario/read/read.component.css
@@ -18,11 +18,14 @@ table{
 
 form{
     display:flex;
-    flex-direction: column;
-
+    flex-direction:column;
+    width: 100%;    
 }
 
 button{
     margin-top: 10px;
     margin-right: 15px;
 }
+
+
+
