--- a/src/app/components/usuario/delete/delete.component.html
+++ b/src/app/components/usuario/delete/delete.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-    <mat-card-title> Excluir Usuário</mat-card-title>
+    <mat-card-title> Deseja realmente excluir o usário? </mat-card-title>
     <form>
         <mat-form-field>
             <input matInput placeholder="Nome" [value]="usuario.nome" name="nome" disabled>            
