--- a/src/app/components/usuario/create/create.component.html
+++ b/src/app/components/usuario/create/create.component.html
@@ -28,7 +28,7 @@
             <mat-label>Perfil</mat-label>
             <select matNativeControl required placeholder="Perfil" [(ngModel)]="usuario.perfil" name="perfil">
               <option value="Gestor Municipal">Gestor Municipal</option>
-              <option value="Gestor Estadual">Gestor Esatadual</option>
+              <option value="Gestor Estadual">Gestor Estadual</option>
               <option value="Gestor Nacional">Gestor Nacional</option>              
             </select>
           </mat-form-field>
